# hidetoshi-nevaeh-nexus

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  README.md  _redirects  mkdocs.yml  netlify.toml  prompt.md  pyproject.toml  wrangler.toml
.agent/rules/: recipe-book.md
.claude/: settings.local.json
.github/workflows/: cloudflare-pages.yml
docs/: README.md  login.md
docs/Recipe Book/meat-dishes/: 牛肉炖土豆.md
docs/Recipe Book/noodle-dishes/: 新疆豆角焖面.md  羊肉焖饼子.md
docs/Recipe Book/other-dishes/: 大盘鸡.md
docs/Recipe Book/soups/: 汤饭.md
docs/Recipe Book/staple-dishes/: 抓饭.md  新疆抓饭电饭煲.md
docs/Recipe Book/vegetable-dishes/: 土豆丝.md  土豆片.md
docs/assets/javascripts/: netlify-identity.js
docs/hidetoshi/: README.md  personal-profile.md  plan-rationale.md  training-goals.md
docs/hidetoshi-fitness/: README.md  body-issues.md  fitness-goals.md  fitness-plan.md  fitness-profile.md  football-profile.md  physical-profile.md  plan-rationale.md  stair-climbing-worker-guide.md  training-methodology.md
docs/hidetoshi-fitness/body-metrics/: README.md  inBody 2025.10.18.md
docs/hidetoshi-fitness/football-plan/: README.md  resource.md  technical-modules.md  (+1 more)
docs/medical/: README.md
docs/nevaeh-fitness/: README.md  fitness-goals.md  fitness-plan.md  fitness-profile.md  physical-profile.md  training-methodology.md
docs/recipe-book/: README.md  cooking-tips.md  diet-preferences.md  noodle.md  other.md  recipe-format.md  recommended-recipes.md  rice noodle.md  rice.md
docs/work-out-plan/: README.md
internal/: login-auth.md
overrides/: main.html
(+74 files in other folders)
